# Finance_Data_Study

./: .gitignore  README.md  data_converter.py  pyproject.toml
cppsourcefiles/: BRENTMAX.CPP  DEV_MA.CPP  DIFF_EV.CPP  EVEC_RS.CPP  GLOB_MAX.CPP  PARAMCOR.CPP  SENSITIV.CPP  STOC_BIAS.CPP  SVDCMP.CPP
data/: XAGUSD.txt  XAGUSD_Candlestick_1_D_BID_05.05.2003-08.11.2025.csv
data_streamer/: .gitignore  Cargo.toml  FILTERING.md  INTERVALS_GUIDE.md  PAGINATION_GUIDE.md  README.md  SEPARATION_SUMMARY.md  SUMMARY.md  TRADFI_ANALYSIS.md  USAGE.md  test.sh
data_streamer/examples/: discover_linear.rs
data_streamer/src/: bybit.rs  lib.rs  main.rs  tradfi_filter.rs
pyscripts/: DATA_DOWNLOAD_QUICKSTART.md  INVESTING_DOWNLOADER_README.md  (+4 more)
statn/: Cargo.toml  false  test_data.txt
statn/bnd_ret/: Cargo.toml  README.md  implementation_plan.md
statn/bnd_ret/src/: main.rs  stats.rs
statn/boot/: main.rs
statn/bootdtrapp_rate/: BOOT_RATIO.CPP  QSORTD.CPP  RANDOM.CPP  UNIFRAND.CPP
statn/bootstrap_rate/: Cargo.toml  README.md  walkthrough.md
statn/bootstrap_rate/src/: bootstrap.rs  main.rs
statn/bound_mean/: BOOT_CONF.CPP  BOUND_MEAN.CPP  Cargo.toml  README.md
statn/bound_mean/src/: boot_conf.rs  main.rs  qsort.rs  stats.rs  unifrand.rs
statn/check_entropy/: Cargo.toml  entropy.rs  main.rs
statn/check_sensitivity/: Cargo.toml  main.rs
statn/chooser/: Cargo.toml  README.md
statn/chooser/src/: chooser.rs  chooser_dd.rs  criteria.rs  drawdown.rs  lib.rs  main.rs  market_data.rs  permutation.rs  random.rs  sort.rs
statn/complete_model_generator/: Cargo.toml
statn/complete_model_generator/src/: main.rs  report.rs
statn/complete_model_tester/: Cargo.toml
statn/complete_model_tester/src/: main.rs  report.rs  sensitivity.rs
statn/conftest/: CONFTEST.CPP  Cargo.toml  README.md  STATS.CPP
statn/conftest/src/: main.rs
statn/conftest/tests/: integration_test.rs
statn/cross_validation_mkt/: CRITER.CPP  CSCV.CPP  CSCV_CORE.CPP  CSCV_MKT.CPP  Cargo.toml  criter.rs  cscv_core.rs  get_returns.rs  main.rs
statn/docs/: README.md  backtesting.md  complete_model_generator.md  core.md  estimators.md  finance_tools.md  indicators.md  model_discovery_tools.md  models.md  statistical_tools.md
statn/drawdown/: Cargo.toml  README.md
statn/drawdown/src/: drawdown.rs  lib.rs  main.rs  random.rs
statn/gap_analysis/: Cargo.toml  main.rs
statn/model_report/: REPORT.md
statn/montecarlo_permutation_test/: Cargo.toml  MCPT_BARS.CPP  MCPT_TRN.CPP  README.md
statn/montecarlo_permutation_test/src/: file_io.rs  main.rs  mcpt_bars.rs  mcpt_trend.rs  random.rs
statn/overlap/: Cargo.toml  Overlap.cpp  main.rs
statn/per_what/: Cargo.toml  README.md
statn/per_what/src/: main.rs  market.rs  system.rs
statn/src/: lib.rs
statn/src/backtesting/: Cargo.toml
statn/src/backtesting/src/: core.rs  lib.rs  metrics.rs  models.rs  report.rs
statn/src/boot/: BOOT_CONF.rs  BOOT_RATIO.rs  mod.rs
statn/src/core/: mod.rs
statn/src/core/data/: chart.rs
statn/src/core/data_utils/: chart.rs
statn/src/core/io/: Cargo.toml  data.rs  market.rs  mod.rs  read.rs  write.rs
statn/src/core/matlib/: Cargo.toml  STOCH_BIAS_.rs  lib.rs  linalg.rs  mod.rs  mwc256.rs  overlap.rs  paramcor.rs  qsorts.rs
statn/src/core/stats/: main.rs  mod.rs  stats.rs
statn/src/cscv/: CSCV.rs  CSCV_CORE.rs  CSCV_MKT.rs  SVDCMP.rs  main.rs  mod.rs
statn/src/data_utils/: ENTROPY_.rs  MCPT_BARS.rs  MCPT_TRN.rs
statn/src/dev_ma/: CD_MA.rs  DEV_MA.rs  EVEC_RS.rs  main.rs  mod.rs
statn/src/entropy/: Cargo.toml  lib.rs
statn/src/estimators/: Cargo.toml  brentmax.rs  glob_max.rs  mod.rs  sensitivity.rs  stochastic_bias.rs
statn/src/finance_tools/: Cargo.toml  lib.rs  price.rs  probability.rs
statn/src/gap_analysis/: Cargo.toml  analysis.rs  data.rs  indicators.rs  lib.rs  main.rs
statn/src/indicators/: Cargo.toml  lib.rs  specs.rs  trend.rs  volatility.rs
statn/src/indicators/oscillator/: cci.rs  mod.rs  rsi.rs  stochastic.rs
statn/src/indicators/oscillators/: macd.rs  mod.rs  rsi.rs
statn/src/indicators/trend/: ma.rs  macd.rs  mod.rs
statn/src/indicators/volatility/: bollinger_bands.rs  mod.rs
statn/src/indicators/volitality/: mod.rs
statn/src/indicators/volume/: mod.rs  obv.rs
statn/src/io/: Cargo.toml  mod.rs  read.rs
statn/src/matlib/: Cargo.toml  Linalg.rs  Overlap.rs  Paramcor.rs  Qsorts.rs  Rands.rs  lib.rs  main.rs
statn/src/models/: CDmodel.rs  cd_ma.rs  differential_evolution.rs  mod.rs
statn/src/stats/: Cargo.toml  lib.rs  mod.rs  stats.rs
statn/src/test_utils/: BND_RET.rs  BOUND_MEAN.rs  BRENTMAX.rs  CDmodel.rs  CHOOSER.rs  CHOOSER_DD.rs  CONFTEST.rs  CRITER.rs  DIFF_EV.rs  DRAWDOWN.rs  PER_WHAT.rs  SENSITIV.rs  SelBias.rs  TrnBias.rs  XvW.rs  main.rs  mod.rs
statn/stationary_test/: Cargo.toml  analysis.rs  main.rs
statn/test_utils/: XvW.rs
statn/train_bias/: Cargo.toml  TrnBias.CPP  main.rs  opt.rs  rng.rs  selbias.rs  test_system.rs  tests.rs  trnbias.rs
statn/try_cd_comb/: BACKTESTING_SUMMARY.md  BUGFIX.md  Cargo.toml  MACD_ADDITION.md  MULTIPLE_CONFIGS.md  README.md  SUMMARY.md  config.example.toml  config.toml  main.rs
statn/try_cd_comb/src/: backtest.rs  config.rs  data.rs  evaluation.rs  indicators.rs  lib.rs  model_io.rs
statn/try_cd_combined/: IMPROVEMENT_GUIDE.md
statn/try_cd_combined/src/: config.rs  evaluation.rs  indicators.rs  training.rs
statn/try_cd_ma/: Cargo.toml  IMPROVEMENT_GUIDE.md  README.md  config.example.toml  config.toml  main.rs
statn/try_cd_ma/src/: backtest.rs  config.rs  data.rs  evaluation.rs  indicators.rs  lib.rs  strategy.rs  training.rs
statn/try_cd_model/: Cargo.toml  main.rs
statn/try_diff_ev/: Cargo.toml  README.md  config.example.toml  config.predict.toml  entrypoint_helper.rs  main.rs
statn/try_diff_ev/src/: backtest.rs  config.rs  evaluators.rs  io.rs  lib.rs  signals.rs  signals_generators.rs  test_system.rs  test_system_enhanced.rs  visualization.rs
statn/try_diff_ev/tests/: integration_test.rs
statn/try_estimators/: Cargo.toml  main.rs
statn/try_indicators/: Cargo.toml  entropy.rs  main.rs
(+1 files in other folders)
