[workspace]
members = [
    "src/core/matlib",
    "src/core/stats",
    "src/finance_tools",
    "src/indicators",
    "try_estimators",
    "try_cd_ma",
    "try_diff_ev",
    "check_sensitivity",
    "gap_analysis",
    "train_bias",
    "overlap",
    "cross_validation_mkt",
    "chooser",
    "per_what", "bound_mean", "bootstrap_rate", "conftest", "bnd_ret", "drawdown",
    "montecarlo_permutation_test",
    "src/backtesting",
]

[package]
name = "statn"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8"
matlib = { path = "src/core/matlib" }
stats = { path = "src/core/stats" }
indicators = { path = "src/indicators" }
finance_tools = { path = "src/finance_tools" }

[dev-dependencies]
tempfile = "3.10"

#[[bin]]
#name = "try_cd_ma"
#path = "try_cd_ma/main.rs"

# [[bin]]
# name = "cscv"
# path = "src/cscv/main.rs"

# [[bin]]
# name = "dev_ma"
# path = "src/dev_ma/main.rs"



[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8"
