[package]
name = "complete_model_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
statn = { path = "../" }
try_cd_ma = { path = "../try_cd_ma" }
