[package]
name = "montecarlo_permutation_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcpt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
statn = { path = "../" }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
