[package]
name = "stationary_test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stationary_test"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
matlib = { path = "../src/core/matlib" }
stats = { path = "../src/core/stats" }
finance_tools = { path = "../src/finance_tools" }
indicators = { path = "../src/indicators" }
statn = { path = "../" }