[package]
name = "try_cd_ma"
version = "0.1.0"
edition = "2024"

[lib]
name = "try_cd_ma"
path = "src/lib.rs"

[[bin]]
name = "try_cd_ma"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
matlib = { path = "../src/core/matlib" }
stats = { path = "../src/core/stats" }
finance_tools = { path = "../src/finance_tools" }
indicators = { path = "../src/indicators" }
statn = { path = "../" }

[dev-dependencies]
tempfile = "3.8"