[package]
name = "try_diff_ev"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "try_diff_ev"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
matlib = { path = "../src/core/matlib" }
stats = { path = "../src/core/stats" }
finance_tools = { path = "../src/finance_tools" }
indicators = { path = "../src/indicators" }
statn = { path = "../" }
plotters = "0.3.6"