[package]
name = "entropy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "entropy"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
matlib = { path = "../core/matlib" }
stats = { path = "../core/stats" }
finance_tools = { path = "../finance_tools" }
indicators = { path = "../indicators" }
io = { path = "../io" }