[package]
name = "indicators"
version = "0.1.0"
edition = "2024"

[lib]
name = "indicators"
path = "lib.rs"

[dependencies]
rand = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
matlib = { path = "../core/matlib" }
stats = { path = "../core/stats" }
finance_tools = { path = "../finance_tools" }